しゅうせい

--- a/start.css
+++ b/start.css
@@ -1,6 +1,6 @@
 body {
-    font-siza:70px;
-    font-family
+    font-size:70px;
+    font-family:;
     background-color:#e6e6fa;
     margin:0;
     padding:0;
