--- a/Start/start.css
+++ b/Start/start.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
-    background-image: url('./kyouzai.png.jpg'); 
+    background-image: url('./image2-11.jpeg'); 
     background-size: cover; 
     background-position: center;
     background-repeat: no-repeat; 
