--- a/Honpen/Honpen.css
+++ b/Honpen/Honpen.css
@@ -13,6 +13,26 @@ body {
 	padding: 10px;
 }
 
+.swi_Japa {
+	width: 500px;
+	background-color: #FFE4E1;
+	border-radius: 20px;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+.swi_Math {
+	width: 500px;
+	background-color: #E0FFFF;
+	border-radius: 20px;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
 .swi_Eng {
 	width: 500px;
 	background-color: #FFE4E1;
