--- a/syakai/syakai.css
+++ b/syakai/syakai.css
@@ -98,3 +98,9 @@ label.selected {
     border-radius: 5px;
     padding: 5px;
 }
+
+.Quiz_Timer {
+    color:red;
+    font-size:50px;
+    font-weight: bold;
+}
